[package]
name = "cross-fs"
version = "0.1.0"
edition = "2024"
description = "A cross-platform filesystem"

[features]
align-512 = []
direct-io = []

[dependencies]
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.23"
